Sista ändring.. 100% klart med websidan

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <h1 class="instruktioner">
-        Instruktioner
+        Visuella instruktioner
     </h1>
 
     <div class="bilder">
